--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -12,7 +12,7 @@
     <div class="text-2xl font-bold">Elite Motors</div>
     <ul class="flex space-x-6">
         <li><%= link_to 'Home', root_path, class: 'hover:underline' %></li>
-        <li><%= link_to 'Add Car', new_car_path, class: 'hover:underline' %></li>
+        <li><%= link_to 'Add Caraa', new_car_path, class: 'hover:underline' %></li>
     </ul>
 </nav>
 
