--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Motors - Car Listings</title>
+    <title>Elite Motors - Car Listings ovo radi kralju takoddaaa radi vojde</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen">
