--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -19,7 +19,9 @@
 
   <div>
     <%= f.label :model_id, "Model" %>
-    <%= f.collection_select :model_id, Model.none, :id, :name, { prompt: "Select a Model" }, { class: "p-3 border rounded", id: "model-select" } %>
+    <!-- Dodajanje možnosti za ročni vnos modela -->
+    <%= f.select :model_id, @models.map { |m| [m.name, m.id] }, { include_blank: "Select a Model" }, class: "p-3 border rounded", id: "model-select" %>
+    <%= f.text_field :model_name, placeholder: "Or enter model name", class: "p-3 border rounded" %> <!-- Ročni vnos modela -->
   </div>
 
   <div>
@@ -54,11 +56,16 @@
 
 <%= link_to 'Back to Cars', cars_path %>
 
+<!-- Footer -->
+<footer class="bg-gray-800 text-white text-center p-4 w-full fixed bottom-0 left-0">
+    &copy; 2025 Elite Motors. All rights reserved.
+</footer>
+
 <script>
   document.addEventListener("DOMContentLoaded", function() {
     document.getElementById("brand-select").addEventListener("change", function() {
       let brandId = this.value;
-      fetch(`/models?brand_id=${brandId}`)
+      fetch(`/cars/load_models?brand_id=${brandId}`)
         .then(response => response.json())
         .then(data => {
           let modelSelect = document.getElementById("model-select");
