--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -43,7 +43,7 @@
                         <img src="https://via.placeholder.com/400" class="w-full h-52 object-cover">
                     <% end %>
                     <div class="p-4">
-                        <h3 class="text-xl font-bold"><%= car.brand.name %> <%= car.car_model.name %></h3>
+                    <h3 class="text-xl font-bold"><%= car.brand.name %> <%= car.model.name %></h3>
                         <p class="text-gray-600 mt-2">Year: <%= car.year %> | <%= car.km %> km | <%= car.fuel_type %></p>
                         <p class="text-blue-600 font-bold mt-3 text-lg">€<%= car.price %></p>
                         <div class="mt-5 flex justify-between">
