--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -19,7 +19,6 @@
 
   <div>
     <%= f.label :model_id, "Model" %>
-    <!-- Dodajanje možnosti za ročni vnos modela -->
     <%= f.select :model_id, @models.map { |m| [m.name, m.id] }, { include_blank: "Select a Model" }, class: "p-3 border rounded", id: "model-select" %>
     <%= f.text_field :model_name, placeholder: "Or enter model name", class: "p-3 border rounded" %> <!-- Ročni vnos modela -->
   </div>
@@ -45,8 +44,8 @@
   </div>
 
   <div>
-    <%= f.label :car_image, 'Car Image' %>
-    <%= f.file_field :car_image, class: 'p-3 border rounded' %>
+    <%= f.label :car_images, 'Car Images' %>
+    <%= f.file_field :images, multiple: true, class: 'p-3 border rounded' %>  <!-- Omogočimo nalaganje več slik -->
   </div>
 
   <div>
@@ -55,28 +54,3 @@
 <% end %>
 
 <%= link_to 'Back to Cars', cars_path %>
-
-<!-- Footer -->
-<footer class="bg-gray-800 text-white text-center p-4 w-full fixed bottom-0 left-0">
-    &copy; 2025 Elite Motors. All rights reserved.
-</footer>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    document.getElementById("brand-select").addEventListener("change", function() {
-      let brandId = this.value;
-      fetch(`/cars/load_models?brand_id=${brandId}`)
-        .then(response => response.json())
-        .then(data => {
-          let modelSelect = document.getElementById("model-select");
-          modelSelect.innerHTML = '<option value="">Select a Model</option>';
-          data.forEach(model => {
-            let option = document.createElement("option");
-            option.value = model.id;
-            option.textContent = model.name;
-            modelSelect.appendChild(option);
-          });
-        });
-    });
-  });
-</script>
