--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -26,9 +26,10 @@
         <div class="flex flex-col md:flex-row justify-between items-center">
             <!-- Car Image -->
             <div class="w-full md:w-1/2 mb-6 md:mb-0">
-                <% if @car.car_image.attached? %>
-                    <%= image_tag @car.car_image, class: "w-full h-80 object-cover rounded-lg" %>
-                <% else %>
+            <% car.car_images.each do |image| %>
+                <%= image_tag image, class: "w-full h-52 object-cover" %>
+              <% end %>
+              
                     <img src="https://via.placeholder.com/400" class="w-full h-80 object-cover rounded-lg">
                 <% end %>
             </div>
