--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -44,8 +44,8 @@
   </div>
 
   <div>
-    <%= f.label :images %>
-    <%= f.file_field :images, multiple: true %>  <!-- Omogoči nalaganje več slik -->
+    <%= f.label :image %>
+    <%= f.file_field :image, multiple: true %>  <!-- Omogoči nalaganje več slik -->
   </div>
 
   <div>
