--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<h1 class="text-2xl font-bold">Register</h1>
+<h1 class="text-2xl font-bold">Register or Login</h1>
 
-<%= form_with model: @user, local: true do |form| %>
+<%= form_with model: @user, url: @user.new_record? ? users_path : login_path, local: true do |form| %>
   <div>
     <%= form.label :email, class: "block" %>
     <%= form.email_field :email, class: "p-3 border rounded w-full" %>
@@ -11,12 +11,14 @@
     <%= form.password_field :password, class: "p-3 border rounded w-full" %>
   </div>
 
-  <div>
-    <%= form.label :password_confirmation, class: "block" %>
-    <%= form.password_field :password_confirmation, class: "p-3 border rounded w-full" %>
-  </div>
+  <% if @user.new_record? %>
+    <div>
+      <%= form.label :password_confirmation, class: "block" %>
+      <%= form.password_field :password_confirmation, class: "p-3 border rounded w-full" %>
+    </div>
+  <% end %>
 
   <div>
-    <%= form.submit "Register", class: "p-3 bg-blue-500 text-white rounded" %>
+    <%= form.submit @user.new_record? ? "Register" : "Login", class: "p-3 bg-blue-500 text-white rounded" %>
   </div>
 <% end %>
