--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <ul class="flex space-x-4">
     <li><%= link_to 'Domov', root_path %></li>
     <li><%= link_to 'Avtomobili', cars_path %></li>
-    <% if user_signed_in? %>
+    <% if logged_in? %>
       <li><%= link_to 'Odjava', logout_path %></li>
     <% else %>
       <li><%= link_to 'Prijava', login_path %></li>
